<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingHorizontal="24dp"
    android:paddingVertical="14dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo_sentinel_lock"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/buttom_green"
        android:layout_marginBottom="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailLabel"
        android:layout_marginBottom="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_email_outlined"
        app:startIconTint="@color/white"
        app:boxStrokeColor="@color/buttom_green"
        app:boxStrokeErrorColor="@color/danger"
        app:cursorErrorColor="@color/danger"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordLabel"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_lockpassword_outlined"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:boxStrokeColor="@color/buttom_green"
        app:boxStrokeErrorColor="@color/danger"
        app:cursorErrorColor="@color/danger"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRecoveryPassword"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_gravity="end"
        android:textSize="12sp"
        android:padding="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/recoveryPassword"
        android:textAllCaps="false"
        android:textColor="@color/buttom_green"
        android:textStyle="bold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/buttom_green" />

    <Button
        android:id="@+id/buttonContWithoutRegistr"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="14sp"
        android:padding="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/contWithoutRegistr"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="14sp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:padding="0dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

</androidx.appcompat.widget.LinearLayoutCompat>