<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_200"
    android:paddingHorizontal="24dp"
    android:paddingVertical="10dp"
    tools:context=".RecoveryPasswordActivity">

    <ImageButton
        android:id="@+id/buttonBackToSignIn"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_left"
        android:contentDescription="@string/buttonLeftBackSignInDescription"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:text="@string/titleRecoveryPassword"
            android:textColor="@color/green_500"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:textStyle="normal"
            android:text="@string/subtitleRecoveryPassword"
            android:textColor="@color/green_500"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/ic_email_outlined"
            app:startIconTint="@color/green_500"
            android:paddingBottom="16dp"
            android:layout_margin="4dp"
            android:hint="@string/emailLabelRegister"
            app:boxStrokeColor="@color/green_500"
            android:textColorHint="@color/green_500"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/green_500"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSendRecoveryPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/green_500"
            android:textStyle="bold"
            android:text="@string/sendRecoveryPassword"
            android:backgroundTint="@color/green_500"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>