<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Layout principal -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/gray_100"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        tools:context=".ProfileActivity"
        android:layout_gravity="center_vertical">

        <!-- Título "My Profile" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MYProfile"
            android:textSize="30sp"
            android:textColor="@color/green_500"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

        <!-- Imagem de perfil -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/question_mark"
            android:layout_marginBottom="15dp"
            android:background="@drawable/circle_background"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"/>

        <!-- Texto "Login to access your account" -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:padding="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/LoginToAcessAccount"
            android:textAllCaps="false"
            android:textColor="@color/green_500"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <!-- Texto "If you have an account, log in" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IfAccountLogin"
            android:textSize="20sp"
            android:textColor="@color/green_500" />

        <!-- Botão de login -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/green_500"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"/>


        <!-- Botão de cadastro -->
        <Button
            android:id="@+id/buttonCadastrar2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/green_500"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_900"
        app:menu="@menu/bottom_navigation" />

</LinearLayout>
