<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingHorizontal="24dp"
    android:paddingVertical="14dp"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/buttonBackToSignIn"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_left"
        android:contentDescription="@string/buttonLeftBackSignInDescription"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/titleRegister"
        android:textColor="@color/green_500"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textStyle="normal"
        android:text="@string/subtitleRegister"
        android:textColor="@color/green_900"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNome"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:paddingBottom="20dp"
        app:startIconDrawable="@drawable/ic_person"
        app:endIconMode="clear_text"
        android:hint="@string/nameLabelRegister"
        app:boxStrokeColor="@color/green_900"
        android:textColorHint="@color/gray_200"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/green_900"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_email"
        android:paddingBottom="20dp"
        android:layout_margin="4dp"
        android:hint="@string/emailLabelRegister"
        app:boxStrokeColor="@color/green_900"
        android:textColorHint="@color/gray_200"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_password"
        app:counterMaxLength="25"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:layout_margin="4dp"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true"
        android:hint="@string/passwordLabelRegister"
        app:boxStrokeColor="@color/green_900"
        android:textColorHint="@color/gray_200"
        app:counterTextColor="@color/green_500"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etIdade"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_date"
        android:layout_margin="4dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:paddingBottom="20dp"
        android:hint="@string/dateLabelRegister"
        app:boxStrokeColor="@color/green_900"
        android:textColorHint="@color/gray_200"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCPF"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_document"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:counterMaxLength="11"
        android:layout_margin="4dp"
        app:counterEnabled="true"
        android:hint="@string/documentLabelRegister"
        app:boxStrokeColor="@color/green_900"
        android:textColorHint="@color/gray_200"
        app:counterTextColor="@color/green_500"
        android:layout_gravity="center">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCelular"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_phone"
        android:layout_margin="4dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:counterMaxLength="11"
        android:layout_gravity="center"
        app:counterEnabled="true"
        android:hint="@string/phoneLabelRegister"
        app:boxStrokeColor="@color/green_900"
        android:textColorHint="@color/gray_200"
        app:counterTextColor="@color/green_500">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTextCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="11"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:text="@string/registerAccount"
        android:backgroundTint="@color/green_500"
        />

</androidx.appcompat.widget.LinearLayoutCompat>