<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/background"
        android:paddingHorizontal="24dp"
        android:paddingVertical="14dp"
        tools:context=".ProfileActivity"
        android:layout_gravity="center_vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MYProfile"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="-46dp"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_person"
            android:layout_marginBottom="15dp"
            android:background="@drawable/circle_background"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="310dp"
            android:text="@string/Name"
            android:textAllCaps="false"
            android:textColor="@color/green_500"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <TextView
            android:id="@+id/TextViewNome"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:background="@drawable/border_green_138"
            android:layout_marginBottom="10dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="310dp"
            android:text="@string/emailLabel"
            android:textAllCaps="false"
            android:textColor="@color/green_500"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <TextView
            android:id="@+id/TextViewEmail"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:background="@drawable/border_green_138"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:textSize="12sp"
            android:padding="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="310dp"
            android:text="@string/CPF"
            android:textAllCaps="false"
            android:textColor="@color/green_500"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <TextView
            android:id="@+id/TextViewCpf"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/white"
            android:background="@drawable/border_green_138"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/buttonManageCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ManageCard"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/green_138"
            android:drawableLeft="@drawable/creditcard"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonLogout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signOut"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation" />

</LinearLayout>

